--- a/template/dean_tech_150528/common/header_userstatus.htm
+++ b/template/dean_tech_150528/common/header_userstatus.htm
@@ -60,8 +60,8 @@
 <div class="rightLogin">
     <!--未登陆显示-->
     <div class="loginBefore">
-        <a href="member.php?mod=logging&action=login" target="_blank"  class="deanlogin"><input type="button" value="登陆"></a>
-        <a href="member.php?mod={$_G[setting][regname]}" target="_blank" class="deanregister"><input type="button" value="注册" ></a>
+        <a href="http://login.gmatonline.cn/cn/index?source=5&url=http://bbs.gmatonline.cn"  class="deanlogin"><input type="button" value="登陆"></a>
+        <a href="http://login.gmatonline.cn/cn/index/register?source=5&url=http://bbs.gmatonline.cn" class="deanregister"><input type="button" value="注册" ></a>
     </div>
 </div>
 
