--- a/template/default/forum/forumdisplay.htm
+++ b/template/default/forum/forumdisplay.htm
@@ -75,9 +75,6 @@
                     <li data-target="#carousel-example-generic" data-slide-to="3" class=""></li>
                     <li data-target="#carousel-example-generic" data-slide-to="4" class=""></li>
                     <li data-target="#carousel-example-generic" data-slide-to="5" class=""></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="6" class=""></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="7" class=""></li>
-
                 </ol>
                 <!-- Wrapper for slides test -->
                 <div class="carousel-inner" role="listbox">
@@ -99,25 +96,15 @@
 						<a href="toefl.gmatonline.cn" title=""><img
 								src="template/dean_tech_150528/images/luntan_lunbo05.png" title="" alt=" "></a>
 					</div>
-					<div class="item">
-						<a href="#" title=""><img
-								src="template/dean_tech_150528/images/luntan_lunbo006.png" title="" alt=" "></a>
-					</div>
 
 					<div class="item">
                         <a href="http://www.gmatonline.cn/gmatcourses/292.html" title="雷哥陪练"><img
                                 src="template/dean_tech_150528/images/luntan_lunboA6.jpg" title="雷哥陪练" alt=" 雷哥陪练"></a>
                     </div>
 					<div class="item">
-                        <a href="http://www.liuxueonline.cn/public-class/442.html" title="公开课"><img
+                        <a href="http://toefl.gmatonline.cn/" title="公开课"><img
                                 src="template/dean_tech_150528/images/luntan_lunbo07.png" title="公开课" alt=" 公开课"></a>
                     </div>
-					<div class="item">
-                        <a href="http://www.gmatonline.cn/gmatcourses/405.html" title="雷哥网学习平台"><img
-                                src="template/dean_tech_150528/images/luntan_lunbo08.png" title="雷哥网学习平台" alt=" 雷哥网学习平台"></a>
-                    </div>
-
-
 
                 </div>
 
