--- a/template/dean_tech_150528/common/header.css
+++ b/template/dean_tech_150528/common/header.css
@@ -69,9 +69,9 @@ input[type=radio]{-webkit-appearance: radio;} input[type=checkbox]{-webkit-appea
     color: #787878;
 }
 .leftNav ul li:nth-child(6){
-    color: #676767;
-    margin-left: 20px;
-    margin-right: 16px;
+    /*color: #676767;*/
+    /*margin-left: 20px;*/
+    /*margin-right: 16px;*/
 }
 .leftNav ul li:nth-child(7){
     color: #e5e5e5;
