--- a/template/default/forum/forumdisplay.htm
+++ b/template/default/forum/forumdisplay.htm
@@ -90,7 +90,7 @@
 									src="template/dean_tech_150528/images/luntan_lunbo001.jpg" title="" alt=" "></a>
 						</div>
 						<div class="item">
-							<a href="http://toefl.gmatonline.cn/" title=""><img
+							<a href="http://www.toeflonline.cn/" title=""><img
 									src="template/dean_tech_150528/images/luntan_lunbo09.png" title="" alt=" "></a>
 						</div>
 						<div class="item">
@@ -102,7 +102,7 @@
 									src="template/dean_tech_150528/images/luntan_lunbo03.png" title="" alt=" "></a>
 						</div>
 						<div class="item">
-							<a href="toefl.gmatonline.cn" title=""><img
+							<a href="www.toeflonline.cn" title=""><img
 									src="template/dean_tech_150528/images/luntan_lunbo05.png" title="" alt=" "></a>
 						</div>
 						<div class="item">
